--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
-    "vee-validate": "^2.1.7",
+    "vee-validate": "2.1.7",
     "vue": "^2.6.11",
     "vuex": "^3.4.0",
     "webpack": "^4.46.0"
