--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ VUE_APP_NS_KEY=""
 VUE_APP_NS_SECRET=""
 VUE_APP_NS_CONSUMER_TOKEN=""
 VUE_APP_NS_CONSUMER_SECRET=""
+
+VUE_APP_NS_SERVICE_FUEL_SURCHARGE=""
+VUE_APP_NS_EXPRESS_FUEL_SURCHARGE=""
+VUE_APP_NS_STANDARD_FUEL_SURCHARGE=""
